<?xml version="1.0" encoding="utf-8"?>
<!--
This file was modified by Amazon:
Copyright 2015-2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
A copy of the License is located at

    http://aws.amazon.com/apache2.0/

or in the "license" file accompanying this file. This file is distributed
on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
express or implied. See the License for the specific language governing
permissions and limitations under the License.
-->
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="feed_reloading">Reloading</string>
    <string name="feed_loading">Loading</string>

    <!-- The label for use as a searchable item -->
    <string name="search_results">Search Results</string>
    <!-- The hint text that appears in the search box. -->
    <string name="search_bar_hint">I\'m looking for…</string>
    <string name="lb_search_bar_hint">@string/search_bar_hint</string>
    <string name="lb_search_bar_hint_speech">@string/search_bar_hint</string>

    <string name="video_title">Video Title</string>
    <string name="video_subtitle">Video Subtitle</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\":</item>
        <item quantity="other">%1$d results for \"%2$s\":</item>
    </plurals>

    <!-- Time Remaining Label. -->
    <string name="time_remaining">Time Remaining: %s</string>
    <string name="duration">%1$d:%2$02d:%3$02d</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <!-- Copyright string -->
    <string name="copyright">Copyright 2019. All Rights
        Reserved.
    </string>
    <string name="terms_title">Terms and Privacy Policy</string>

    <string name="related_contents">Recommended Content</string>

    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="recent_row">Continue Watching</string>
    <string name="watchlist_row">Watchlist</string>
    <string name="alexa_media_session_permission" translatable="false">
        com.amazon.permission.media.session.voicecommandcontrol
    </string>


    <!--
        Zype, Evgeny Cherkasov
    -->
    <!-- Buy video -->
    <string name="buy_playlist_button_confirm">Buy all %1$s videos</string>
    <string name="buy_playlist_button_confirm_price">Buy all %1$s videos - %2$s</string>
    <string name="buy_video_button_confirm">Buy Video</string>
    <string name="buy_video_button_confirm_price">Buy Video - %1$s</string>
    <string name="buy_video_button_cancel">Cancel</string>
    <string name="buy_video_button_restore">Restore purchase</string>
    <string name="buy_video_confirm">Confirm purchase</string>

    <!-- Content details -->
    <string name="content_details_recommended_header_favorites">Favorites</string>

    <!-- Create login -->
    <string name="create_login_email">Email</string>
    <string name="create_login_email_error_empty">Email is required</string>
    <string name="create_login_email_error_invalid">Enter valid email</string>
    <string name="create_login_error_credentials">Please enter valid credentials.</string>
    <string name="create_login_error_tos">You must agree with the terms of service in order to proceed.</string>
    <string name="create_login_password">Password</string>
    <string name="create_login_password_error_empty">Enter password</string>
    <string name="create_login_terms_of_service">I agree to the terms of service</string>
    <string name="create_login_button_sign_up">Sign Up</string>
    <string name="create_login_description">You will be able to enjoy watching from any device</string>
    <string name="create_login_title">Create a login</string>

    <!-- Login -->
    <string name="login_message">Please sign in to watch</string>

    <!-- Subscription -->
    <string name="subscription_button_cancel">Cancel and continue browsing</string>
    <string name="subscription_button_confirm">Subscribe and Watch</string>
    <string name="subscription_choose_plan_description">You need to be %1$s subscriber to enjoy this video. Get unlimited access on all your devices by choosing an auto-renewing subscription plan</string>
    <string name="subscription_have_account">Already have an account?</string>
    <string name="subscription_item_free_trial">%1$s-day Free Trial</string>
    <string name="subscription_item_price">$%1$s per %2$s</string>
    <string name="subscription_logged_in">Logged in as:</string>
    <string name="subscription_title_choose_plan">Choose a plan</string>
    <string name="subscription_title_confirm">Confirm Subscription</string>

    <string name="action_load_more">Load more…</string>
    <string name="ime_action_label_previous">Cancel</string>
    <string name="ime_action_label_search">Search</string>

    <string name="autoplay_message">You can press the menu button in order to return to the %1$s home screen</string>

</resources>
