<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <ImageView
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:id="@+id/imageLogo"
        android:src="@drawable/company_logo"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/create_login_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/login_code_color"
        />
    <EditText
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:hint="@string/create_login_email"
        android:textColorHint="@color/tertiary_text"
        android:backgroundTint="@color/background_tint_color_selector"
        />
    <EditText
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:hint="@string/create_login_password"
        android:textColorHint="@color/tertiary_text"
        android:backgroundTint="@color/background_tint_color_selector"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttonSignUp"
        android:background="@drawable/highlighted_button_background"
        android:textColor="@drawable/action_button_text_color_selector"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:text="@string/create_login_button_sign_up"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/checkboxTermsOfService"
        android:text="@string/create_login_terms_of_service"
        android:checked="true"
        android:drawableStart="@android:color/transparent"
        android:drawablePadding="16dp"
        android:buttonTint="@color/accent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/subscription_have_account"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/login_instructions_color"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="20dp"
            android:id="@+id/buttonLogin"
            android:background="@drawable/action_button_background"
            android:textColor="@drawable/action_button_text_color_selector"
            android:minWidth="200dp"
            android:minHeight="48dp"
            android:text="@string/zype_login_button"
            />
    </LinearLayout>

</LinearLayout>