<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:id="@+id/layoutConfirm"
            tools:visibility="visible"
            >
            <ImageView
                android:layout_width="116dp"
                android:layout_height="46dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@drawable/company_logo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/buy_video_confirm"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/login_code_color"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/textVideo"
                android:textSize="24sp"
                android:textColor="@color/login_instructions_color"
                tools:text="Vide Title"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/buttonConfirm"
                android:background="@drawable/action_button_background"
                android:textColor="@drawable/action_button_text_color_selector"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/buy_video_button_confirm"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/buttonRestore"
                android:background="@drawable/action_button_background"
                android:textColor="@drawable/action_button_text_color_selector"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/buy_video_button_restore"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/buttonCancel"
                android:background="@drawable/action_button_background"
                android:textColor="@drawable/action_button_text_color_selector"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/buy_video_button_cancel"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/layoutLogin"
            android:gravity="center_horizontal"
            tools:visibility="visible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/subscription_have_account"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/login_instructions_color"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:id="@+id/buttonLogin"
                android:background="@drawable/action_button_background"
                android:textColor="@drawable/action_button_text_color_selector"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:text="@string/zype_login_button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/layoutLoggeIn"
            android:gravity="center_horizontal"
            tools:visibility="invisible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/subscription_logged_in"
                android:textSize="16sp"
                android:textColor="@color/login_instructions_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:id="@+id/textConsumerEmail"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/login_instructions_color"
                tools:text="echerkasov@zype.com"
                />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
